Fixed overflow-x

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -10,6 +10,7 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
+  overflow-x: hidden;
 }
 
 img {
